# bom

./: .gitignore  2022-12-01-bom-catalog.xlsx  AGENTS.md  DEVNOTES.md  LICENSE  Makefile  README.md  config.yaml  package-lock.json  package.json
api-docs/: api-reference.md
bom-data/: 2024-12-10-deathdictionary.csv  2025-01-31-deathdictionary.csv  London-parishes-authority-file.csv  README.md  deathdictionary.csv
bom-db/: .eslintcache  .prettierrc  Makefile  README.md  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
bom-processing/: README.md
bom-processing/notebooks/mapping/: 01-map.qmd  2023-04-30-monarchs-bill-transcriptions.xlsx  README.md  cross-walk.xlsx  crosswalk.py  monarchs-bills-merged.csv  monarchs-bills-merged.xlsx  parishes-merged.shx  pyproject.toml  requirements.txt
bom-processing/scripts/bompy/: AGENTS.md  DEVNOTES.md  Makefile  README.md  analyze_data_coverage.py  analyze_subtotal_arithmetic.py  process_all_data.py  pyproject.toml
bom-processing/scripts/bompy/data/: London Parish Authority File.csv  all_bills.csv  causes_of_death.csv  christenings.csv  christenings_by_gender.csv  christenings_by_parish.csv  dictionary.csv  duplicate_bills.csv  duplicate_bills_removable.csv  foodstuffs.csv  parishes.csv  subtotal_validation_results.csv  subtotals.csv  weeks.csv  years.csv
bom-processing/scripts/bompy/data-compare/: ParcodeDict.txt  ReadMe.txt  WeekDict.txt  ages.txt  bread.txt  inputtingnotes.txt  parishes-crosswalk.csv
bom-processing/scripts/bompy/data/2025-11-ArchivalCopyofArticleData/: all_bills.csv  christenings_by_gender.csv  dictionary.csv  duplicate_bills.csv  foodstuffs.csv  sample_bills.csv  subtotals.csv  weeks.csv  years.csv
bom-processing/scripts/bompy/notebooks/: 01_data_exploration.ipynb  02_temporal_analysis.ipynb  03_parish_analysis.ipynb  04_data_quality.ipynb  05_causes_of_death_analysis.ipynb  06_foodstuffs_analysis.ipynb  07_christenings_analysis.ipynb  README.md
bom-processing/scripts/bompy/src/bom/: __init__.py  config.py  models.py
bom-processing/scripts/bompy/src/bom/extractors/: __init__.py  parishes.py  weeks.py  years.py
bom-processing/scripts/bompy/src/bom/loaders/: __init__.py  csv_loader.py  registry.py
bom-processing/scripts/bompy/src/bom/processors/: __init__.py  bills.py  christenings.py  christenings_gender.py  christenings_parish.py  foodstuffs.py  general_bills.py
bom-processing/scripts/bompy/src/bom/utils/: __init__.py  columns.py  logging.py  validation.py
bom-processing/scripts/bompy/tests/: analyze_christening_data.py  analyze_coverage_gap.py  debug_columns.py  debug_parish_extraction.py  debug_postplague_columns.py  diagnose_files.py  test_bills_processor.py  test_causes.py  test_foodstuffs_processor.py  test_loader.py  test_schema_alignment.py
bom-processing/scripts/pybom/: .gitignore  Makefile  README.md  pyproject.toml  run_full_processor.py  test_conversion.py
bom-processing/scripts/pybom/bomr/: __init__.py  data_processing.py  helpers.py  main.py  process_bills.py
bom-website/: '  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.toml  config.yaml  find-problem-urls.sh  hugo_stats.json  new-post.sh  package-lock.json  package.json  rsync-excludes  tags.py
bomr/: 01-dataclean.R
data-csvs/: readme.md  (+1 more)
layouts/: index.html
(+697 files in other folders)
