[tool.poetry]
name = "bom-processing"
version = "0.1.0" 
description = "Processing pipeline for Bills of Mortality historical data"
authors = ["Jason Heppler <jason@jasonheppler.org>"]
readme = "README.md"
packages = [{include = "bom", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
pydantic = "^2.0"
typer = "^0.9"
rich = "^13.0"
loguru = "^0.7"
scipy = "<1.16"
scikit-learn = "<1.5"
jupyterlab = "^4.4.5"
plotly = "^6.2.0"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true