[project]
name = "bom-processing"
version = "0.1.0"
description = "Processing pipeline for Bills of Mortality historical data"
authors = [{ name = "Jason Heppler", email = "jason@jasonheppler.org" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pandas~=2.0",
    "pydantic~=2.0",
    "typer>=0.9,<0.10",
    "rich~=13.0",
    "loguru>=0.7,<0.8",
    "scipy<1.16",
    "scikit-learn<1.5",
    "jupyterlab>=4.4.5,<5",
    "plotly>=6.2.0,<7",
    "matplotlib>=3.10.5,<4",
    "seaborn>=0.13.2,<0.14",
]

[dependency-groups]
dev = [
    "pytest~=7.0",
    "black~=23.0",
    "isort~=5.0",
    "mypy~=1.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/bom"]

[tool.hatch.build.targets.wheel]
include = ["src/bom"]

[tool.hatch.build.targets.wheel.sources]
"src/bom" = "bom"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
